	plugins {
		java
		id("org.springframework.boot") version "3.5.3"
		id("io.spring.dependency-management") version "1.1.7"
	}

	group = "com.DoIt2"
	version = "0.0.1-SNAPSHOT"

	java {
		toolchain {
			languageVersion = JavaLanguageVersion.of(21)
		}
	}

	configurations {
		compileOnly {
			extendsFrom(configurations.annotationProcessor.get())
		}
	}

	repositories {
		mavenCentral()
	}


	dependencies {
		// Web, JPA, Security, Validation, Lombok
		compileOnly("org.projectlombok:lombok:1.18.32")
		annotationProcessor("org.projectlombok:lombok:1.18.32")
		implementation("org.springframework.boot:spring-boot-starter-web")
		implementation("org.springframework.boot:spring-boot-starter-data-jpa")
		implementation("org.springframework.boot:spring-boot-starter-security")
		implementation("org.springframework.boot:spring-boot-starter-validation")

		// PostgreSQL
		runtimeOnly("org.postgresql:postgresql")

		// JWT
		implementation("io.jsonwebtoken:jjwt-api:0.12.3")
		runtimeOnly("io.jsonwebtoken:jjwt-impl:0.12.3")
		runtimeOnly("io.jsonwebtoken:jjwt-jackson:0.12.3")

		// AWS S3 SDK (for Cloudflare R2)
		implementation("software.amazon.awssdk:s3:2.20.63")

		// redis
		implementation("org.springframework.boot:spring-boot-starter-data-redis")
		implementation("org.springframework.boot:spring-boot-starter-cache")

		// OpenAPI (Swagger)
		implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0")

		// Dotenv (.env 파일 로드)
		implementation("io.github.cdimascio:java-dotenv:5.2.2")

		// Test
		testCompileOnly("org.projectlombok:lombok:1.18.32")
		testAnnotationProcessor("org.projectlombok:lombok:1.18.32")
		testImplementation("org.springframework.boot:spring-boot-starter-test")
		testImplementation("org.testcontainers:junit-jupiter")
		testImplementation("org.testcontainers:postgresql")
	}

	tasks.withType<Test> {
		useJUnitPlatform()
	}

	tasks.bootJar {
		archiveFileName.set("app.jar")
	}
